fix members list overflow issues

--- a/app/static/css/coordinator.css
+++ b/app/static/css/coordinator.css
@@ -862,6 +862,7 @@
 .members-list-items {
     overflow-y: scroll;
     padding: 0;
+    height: calc(100vh - 170px);
 }
 
 .members-list-item {
